# screenshot-annotator-tauri

./: package-lock.json  package.json
src/: api.js  app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
