[package]
name = "screenshot-annotator-tauri"
version = "1.0.0"
description = "Screenshot annotation tool for developers, ported to Tauri"
authors = ["slaur"]
edition = "2021"

[lib]
name = "screenshot_annotator_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.6"
base64 = "0.22"
clipboard-win = "5.4"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png", "tiff"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
windows-sys = { version = "0.61", features = ["Win32_Graphics_Dwm"] }
